[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/char_action_button.png" type="Texture" id=1]
[ext_resource path="res://ui/test_font/ntesmall.fnt" type="BitmapFont" id=2]
[ext_resource path="res://ui/char_act_icon_physical.png" type="Texture" id=3]
[ext_resource path="res://ui/char_bar_stamina_icon.png" type="Texture" id=4]
[ext_resource path="res://ui/panel_action.gd" type="Script" id=5]

[node name="Action" type="MarginContainer"]
margin_right = 231.0
margin_bottom = 17.0
custom_constants/margin_left = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1.0
margin_right = 231.0
margin_bottom = 17.0
texture_normal = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_right = 231.0
margin_bottom = 17.0
custom_constants/separation = 3

[node name="NameMargin" type="MarginContainer" parent="HBoxContainer"]
margin_right = 142.0
margin_bottom = 17.0
rect_min_size = Vector2( 142, 17 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActName" type="Label" parent="HBoxContainer/NameMargin"]
margin_left = 3.0
margin_top = 2.0
margin_right = 142.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Want it, Need it"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostMargin" type="MarginContainer" parent="HBoxContainer"]
margin_left = 145.0
margin_right = 171.0
margin_bottom = 17.0
rect_min_size = Vector2( 26, 17 )
custom_constants/margin_top = 1
custom_constants/margin_left = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/CostMargin"]
margin_left = 1.0
margin_top = 1.0
margin_right = 26.0
margin_bottom = 16.0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CostMargin/CenterContainer"]
margin_right = 25.0
margin_bottom = 15.0
custom_constants/margin_top = 0
custom_constants/margin_bottom = 0

[node name="IconMargin" type="MarginContainer" parent="HBoxContainer/CostMargin/CenterContainer/MarginContainer"]
margin_right = 25.0
margin_bottom = 15.0
custom_constants/margin_top = 0
custom_constants/margin_bottom = 0

[node name="CostIcon" type="TextureRect" parent="HBoxContainer/CostMargin/CenterContainer/MarginContainer/IconMargin"]
margin_right = 25.0
margin_bottom = 15.0
texture = ExtResource( 4 )

[node name="ValueMargin" type="MarginContainer" parent="HBoxContainer/CostMargin/CenterContainer/MarginContainer"]
margin_right = 25.0
margin_bottom = 15.0
custom_constants/margin_top = 2
custom_constants/margin_left = 7
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="HBoxContainer/CostMargin/CenterContainer/MarginContainer/ValueMargin"]
margin_left = 7.0
margin_top = 2.0
margin_right = 25.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.996078, 0.796078, 0.752941 )
custom_constants/shadow_as_outline = 1
text = "50"

[node name="CostMargin2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 174.0
margin_right = 200.0
margin_bottom = 17.0
rect_min_size = Vector2( 26, 17 )
custom_constants/margin_top = 1
custom_constants/margin_left = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/CostMargin2"]
margin_left = 1.0
margin_top = 1.0
margin_right = 26.0
margin_bottom = 16.0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CostMargin2/CenterContainer"]
margin_right = 25.0
margin_bottom = 15.0

[node name="IconMargin" type="MarginContainer" parent="HBoxContainer/CostMargin2/CenterContainer/MarginContainer"]
margin_right = 25.0
margin_bottom = 15.0

[node name="CostIcon" type="TextureRect" parent="HBoxContainer/CostMargin2/CenterContainer/MarginContainer/IconMargin"]
margin_right = 25.0
margin_bottom = 15.0
texture = ExtResource( 4 )

[node name="ValueMargin" type="MarginContainer" parent="HBoxContainer/CostMargin2/CenterContainer/MarginContainer"]
margin_right = 25.0
margin_bottom = 15.0
custom_constants/margin_top = 2
custom_constants/margin_left = 7
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="HBoxContainer/CostMargin2/CenterContainer/MarginContainer/ValueMargin"]
margin_left = 7.0
margin_top = 2.0
margin_right = 25.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.996078, 0.796078, 0.752941 )
custom_constants/shadow_as_outline = 1
text = "50"

[node name="DmgMargin" type="MarginContainer" parent="HBoxContainer"]
margin_left = 203.0
margin_right = 229.0
margin_bottom = 17.0
rect_min_size = Vector2( 26, 17 )
custom_constants/margin_top = 1
custom_constants/margin_left = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/DmgMargin"]
margin_left = 1.0
margin_top = 1.0
margin_right = 26.0
margin_bottom = 16.0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DmgMargin/CenterContainer"]
margin_right = 25.0
margin_bottom = 15.0

[node name="IconMargin" type="MarginContainer" parent="HBoxContainer/DmgMargin/CenterContainer/MarginContainer"]
margin_right = 25.0
margin_bottom = 15.0
custom_constants/margin_top = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DmgIcon" type="TextureRect" parent="HBoxContainer/DmgMargin/CenterContainer/MarginContainer/IconMargin"]
margin_right = 25.0
margin_bottom = 15.0
texture = ExtResource( 3 )

[node name="ValueMargin" type="MarginContainer" parent="HBoxContainer/DmgMargin/CenterContainer/MarginContainer"]
margin_right = 25.0
margin_bottom = 15.0
custom_constants/margin_top = 2
custom_constants/margin_left = 7
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="HBoxContainer/DmgMargin/CenterContainer/MarginContainer/ValueMargin"]
margin_left = 7.0
margin_top = 2.0
margin_right = 25.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.996078, 0.796078, 0.752941 )
custom_constants/shadow_as_outline = 1
text = "50"
